# nn-linenoise

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  nn_cli.c  nn_cli.h  nn_linenoise.c  nn_linenoise.h  sample_main.c
.github/workflows/: pr-build-and-tests.yaml
examples/: CMakeLists.txt  nn_cli_config.h  sample_main.c
internal/: check_config.h
src/: CMakeLists.txt  nn_cli.h
test/: CMakeLists.txt  nn_cli_config.h  nn_cli_test.cpp
test/integration/: requirements.txt  test_nn_cli_integration.py
tests/: CMakeLists.txt  nn_cli_test.cpp
tests/integration/: test_nn_cli_integration.py
